--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -8,7 +8,9 @@
         <App id="app">
             <pages>
                 <Page id="page" title="{i18n>title}">
-                    <content />
+                    <content>
+                    <Text id="idText" text="Sagar"/>
+                    </content>
                 </Page>
             </pages>
         </App>
