--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -10,6 +10,7 @@
                 <Page id="page" title="{i18n>title}">
                     <content>
                     <Text id="idText" text="Sagar"/>
+                    <Text id="idText2" text="Sagar1"/>
                     </content>
                 </Page>
             </pages>
