--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -11,6 +11,7 @@
                     <content>
                     <Text id="idText" text="Sagar"/>
                     <Text id="idText2" text="Sagar1"/>
+                    <Text id="idText3" text="Sagar3"/>
                     </content>
                 </Page>
             </pages>
